--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "9.13.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-mocha": "10.5.0",
+    "eslint-plugin-react": "7.37.2",
     "eslint-plugin-unicorn": "56.0.0",
     "globals": "15.11.0",
     "nodemailer": "6.9.15"
