--- a/package.json
+++ b/package.json
@@ -16,19 +16,21 @@
   "scripts": {
     "check": "npx depcheck",
     "pub": "npm publish --access public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --ui tdd test"
   },
   "author": "Stefan Heine <stheine@arcor.de>",
   "license": "ISC",
   "dependencies": {
+    "check-types-2": "11.8.1",
     "dayjs": "1.11.13",
     "depcheck": "1.4.7",
-    "eslint": "9.14.0",
+    "eslint": "9.16.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-mocha": "10.5.0",
     "eslint-plugin-react": "7.37.2",
-    "eslint-plugin-unicorn": "56.0.0",
-    "globals": "15.12.0",
+    "eslint-plugin-unicorn": "56.0.1",
+    "globals": "15.13.0",
+    "mocha": "11.0.1",
     "nodemailer": "6.9.16"
   }
 }
